--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 								<a onclick="chooseType('roster');" class="button large scrolly">Pick Roster</a>
 							</section>
 						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-camera-retro"></span>
+								<h3>Pick your starting 11 and formation for MLS teams</h3>
+								<p>This is your MLS team starting next game.</p>
+								<a href="mls/" class="button large scrolly">Pick Team</a>
+							</section>
+						</div>
 					</div>
 				</div>
 			</article>
